Fix new pmd issues and mistakenly broken tests